--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "neal-react": "^0.2.3",
+    "openseadragon": "^2.1.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-dropzone-component": "^1.0.0",
     "react-router": "^2.0.0-rc5"
   },
   "devDependencies": {
