--- a/package.json
+++ b/package.json
@@ -14,8 +14,18 @@
   "author": "Denny Britz",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
+    "cb": "^0.1.0",
+    "cors": "^2.7.1",
+    "express": "^4.13.4",
+    "express-graphql": "^0.4.13",
+    "graphql": "^0.4.16",
+    "griddle-react": "^0.4.1",
+    "mongoose": "^4.4.12",
+    "multer": "^1.1.0",
     "neal-react": "^0.2.3",
     "openseadragon": "^2.1.0",
+    "path": "^0.12.7",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-dropzone-component": "^1.0.0",
